panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__constexpr__test_error_constexpr_error_in_static_initialisation.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/constexpr/test_error_constexpr_error_in_static_initialisation.c
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: left shift of negative value in constant expression
   ╭─[panko/tests/cases/constexpr/test_error_constexpr_error_in_static_initialisation.c:1:16]
   │
 1 │ static int a = -1 << 1;
   │                ───┬───  
   │                   ╰───── in this expression of type `int`
───╯

Error: shift count negative in constant expression
   ╭─[panko/tests/cases/constexpr/test_error_constexpr_error_in_static_initialisation.c:2:21]
   │
 2 │ static int b = 1 << -1;
   │                     ─┬  
   │                      ╰── in this expression of type `int`
───╯

Error: shift count negative in constant expression
   ╭─[panko/tests/cases/constexpr/test_error_constexpr_error_in_static_initialisation.c:3:21]
   │
 3 │ static int c = 1 >> -1;
   │                     ─┬  
   │                      ╰── in this expression of type `int`
───╯

Error: shift count exceeds size of shifted type in constant expression
   ╭─[panko/tests/cases/constexpr/test_error_constexpr_error_in_static_initialisation.c:4:21]
   │
 4 │ static int d = 1 << 32;
   │                     ─┬  
   │                      ╰── in this expression of type `int`
───╯

Error: signed overflow in constant expression
   ╭─[panko/tests/cases/constexpr/test_error_constexpr_error_in_static_initialisation.c:5:16]
   │
 5 │ static int e = 1 << 31;
   │                ───┬───  
   │                   ╰───── in this expression of type `int`
───╯

Error: shift count exceeds size of shifted type in constant expression
   ╭─[panko/tests/cases/constexpr/test_error_constexpr_error_in_static_initialisation.c:6:21]
   │
 6 │ static int f = 1 << 0x1'0000'0000;
   │                     ──────┬──────  
   │                           ╰──────── in this expression of type `long`
───╯

Error: division by zero in constant expression
   ╭─[panko/tests/cases/constexpr/test_error_constexpr_error_in_static_initialisation.c:8:20]
   │
 8 │ static int g = 1 / 0;
   │                    ┬  
   │                    ╰── in this expression of type `int`
───╯

Error: signed overflow in constant expression
   ╭─[panko/tests/cases/constexpr/test_error_constexpr_error_in_static_initialisation.c:9:16]
   │
 9 │ static int h = (-0x7fff'ffff - 1) / -1;
   │                ───────────┬───────────  
   │                           ╰───────────── in this expression of type `int`
───╯

Error: division by zero in constant expression
    ╭─[panko/tests/cases/constexpr/test_error_constexpr_error_in_static_initialisation.c:11:20]
    │
 11 │ static int i = 1 % 0;
    │                    ┬  
    │                    ╰── in this expression of type `int`
────╯

Error: signed overflow in constant expression
    ╭─[panko/tests/cases/constexpr/test_error_constexpr_error_in_static_initialisation.c:12:16]
    │
 12 │ static int j = (-0x7fff'ffff - 1) % -1;
    │                ───────────┬───────────  
    │                           ╰───────────── in this expression of type `int`
────╯

Error: signed overflow in constant expression
    ╭─[panko/tests/cases/constexpr/test_error_constexpr_error_in_static_initialisation.c:15:17]
    │
 15 │ static int k = (0x7fff'ffff + 1) << 0x1'0000'0000;
    │                 ───────┬───────  
    │                        ╰───────── in this expression of type `int`
────╯

Error: shift count exceeds size of shifted type in constant expression
    ╭─[panko/tests/cases/constexpr/test_error_constexpr_error_in_static_initialisation.c:15:37]
    │
 15 │ static int k = (0x7fff'ffff + 1) << 0x1'0000'0000;
    │                                     ──────┬──────  
    │                                           ╰──────── in this expression of type `long`
────╯

Error: signed overflow in constant expression
    ╭─[panko/tests/cases/constexpr/test_error_constexpr_error_in_static_initialisation.c:16:17]
    │
 16 │ static int l = (0x7fff'ffff + 1) << 100;
    │                 ───────┬───────  
    │                        ╰───────── in this expression of type `int`
────╯

Error: shift count exceeds size of shifted type in constant expression
    ╭─[panko/tests/cases/constexpr/test_error_constexpr_error_in_static_initialisation.c:16:37]
    │
 16 │ static int l = (0x7fff'ffff + 1) << 100;
    │                                     ─┬─  
    │                                      ╰─── in this expression of type `int`
────╯

Error: division by zero in constant expression
    ╭─[panko/tests/cases/constexpr/test_error_constexpr_error_in_static_initialisation.c:18:26]
    │
 18 │ static unsigned m = 1u / 0u;
    │                          ─┬  
    │                           ╰── in this expression of type `unsigned int`
────╯

Error: division by zero in constant expression
    ╭─[panko/tests/cases/constexpr/test_error_constexpr_error_in_static_initialisation.c:19:26]
    │
 19 │ static unsigned n = 1u % 0u;
    │                          ─┬  
    │                           ╰── in this expression of type `unsigned int`
────╯

Error: signed overflow in constant expression
    ╭─[panko/tests/cases/constexpr/test_error_constexpr_error_in_static_initialisation.c:22:17]
    │
 22 │ static int o = (0x7fff'ffff + 1) / 0;
    │                 ───────┬───────  
    │                        ╰───────── in this expression of type `int`
────╯

Error: division by zero in constant expression
    ╭─[panko/tests/cases/constexpr/test_error_constexpr_error_in_static_initialisation.c:22:36]
    │
 22 │ static int o = (0x7fff'ffff + 1) / 0;
    │                                    ┬  
    │                                    ╰── in this expression of type `int`
────╯

Error: not a constant expression
    ╭─[panko/tests/cases/constexpr/test_error_constexpr_error_in_static_initialisation.c:25:16]
    │
 25 │ static int p = not_constexpr = 1 / 0;
    │                ─────────────  
────╯

Error: not a constant expression
    ╭─[panko/tests/cases/constexpr/test_error_constexpr_error_in_static_initialisation.c:25:16]
    │
 25 │ static int p = not_constexpr = 1 / 0;
    │                ─────────────────────  
────╯

Error: division by zero in constant expression
    ╭─[panko/tests/cases/constexpr/test_error_constexpr_error_in_static_initialisation.c:25:36]
    │
 25 │ static int p = not_constexpr = 1 / 0;
    │                                    ┬  
    │                                    ╰── in this expression of type `int`
────╯

Error: division by zero in constant expression
    ╭─[panko/tests/cases/constexpr/test_error_constexpr_error_in_static_initialisation.c:27:21]
    │
 27 │ static int q = (1 / 0, 0);
    │                     ┬  
    │                     ╰── in this expression of type `int`
────╯

Error: division by zero in constant expression
    ╭─[panko/tests/cases/constexpr/test_error_constexpr_error_in_static_initialisation.c:28:24]
    │
 28 │ static int r = (1, 1 / 0);
    │                        ┬  
    │                        ╰── in this expression of type `int`
────╯

Error: division by zero in constant expression
    ╭─[panko/tests/cases/constexpr/test_error_constexpr_error_in_static_initialisation.c:29:21]
    │
 29 │ static int s = (1 / 0, 1 / 0);
    │                     ┬  
    │                     ╰── in this expression of type `int`
────╯

Error: division by zero in constant expression
    ╭─[panko/tests/cases/constexpr/test_error_constexpr_error_in_static_initialisation.c:29:28]
    │
 29 │ static int s = (1 / 0, 1 / 0);
    │                            ┬  
    │                            ╰── in this expression of type `int`
────╯

Error: division by zero in constant expression
    ╭─[panko/tests/cases/constexpr/test_error_constexpr_error_in_static_initialisation.c:32:24]
    │
 32 │     static int a = 1 / 0 && 1 / 0;
    │                        ┬  
    │                        ╰── in this expression of type `int`
────╯

Error: division by zero in constant expression
    ╭─[panko/tests/cases/constexpr/test_error_constexpr_error_in_static_initialisation.c:33:29]
    │
 33 │     static int b = 1 && 1 / 0;
    │                             ┬  
    │                             ╰── in this expression of type `int`
────╯

Error: division by zero in constant expression
    ╭─[panko/tests/cases/constexpr/test_error_constexpr_error_in_static_initialisation.c:35:29]
    │
 35 │     static int c = 0 || 1 / 0;
    │                             ┬  
    │                             ╰── in this expression of type `int`
────╯

Error: division by zero in constant expression
    ╭─[panko/tests/cases/constexpr/test_error_constexpr_error_in_static_initialisation.c:36:24]
    │
 36 │     static int d = 1 / 0 || 1 / 0;
    │                        ┬  
    │                        ╰── in this expression of type `int`
────╯

Error: division by zero in constant expression
    ╭─[panko/tests/cases/constexpr/test_error_constexpr_error_in_static_initialisation.c:40:28]
    │
 40 │     static int a = 1 ? 1 / 0 : 1 / 0;
    │                            ┬  
    │                            ╰── in this expression of type `int`
────╯

Error: division by zero in constant expression
    ╭─[panko/tests/cases/constexpr/test_error_constexpr_error_in_static_initialisation.c:41:36]
    │
 41 │     static int b = 0 ? 1 / 0 : 1 / 0;
    │                                    ┬  
    │                                    ╰── in this expression of type `int`
────╯

Error: division by zero in constant expression
    ╭─[panko/tests/cases/constexpr/test_error_constexpr_error_in_static_initialisation.c:43:24]
    │
 43 │     static int c = 1 / 0 ? 1 / 0 : 1 / 0;
    │                        ┬  
    │                        ╰── in this expression of type `int`
────╯

Error: not a constant expression
    ╭─[panko/tests/cases/constexpr/test_error_constexpr_error_in_static_initialisation.c:51:25]
    │
 51 │     static struct T a = (struct T){.x = 1, .y = 1 / 0};
    │                         ─  
────╯

Error: division by zero in constant expression
    ╭─[panko/tests/cases/constexpr/test_error_constexpr_error_in_static_initialisation.c:51:53]
    │
 51 │     static struct T a = (struct T){.x = 1, .y = 1 / 0};
    │                                                     ┬  
    │                                                     ╰── in this expression of type `int`
────╯

Error: not a constant expression
    ╭─[panko/tests/cases/constexpr/test_error_constexpr_error_in_static_initialisation.c:52:25]
    │
 52 │     static struct T b = (struct T){.x = 1, .y = 1 + 2};
    │                         ─  
────╯
